--- a/src/components/common/MovieForm/MovieForm.module.scss
+++ b/src/components/common/MovieForm/MovieForm.module.scss
@@ -20,7 +20,7 @@
         margin: 25px 0 0;
     }
     button {
-        margin-top: 50px;
+        margin: 50px 0;
     }
     span {
         position: absolute;
